Fixed color contrast issues
Fixes #33

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
     margin: auto;
     padding: 0 21px;
     max-width: 1080px;
-    color: #777;
+    color: #494949;
     opacity: 0;
     font-family: "Lato Regular", sans-serif;
     transition: 350ms padding, 700ms opacity;
@@ -24,7 +24,7 @@ body {
 ::selection {
     text-shadow: none;
     background: #e7fff5;
-    color: #142135;
+    color: #071421;
 }
 
 ul {
@@ -36,29 +36,29 @@ li {
     list-style-type: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
     margin: 0;
 }
 
-h3, h4, h5 {
+h2, h3, h4 {
     font-family: "Lato Regular", sans-serif;
     user-select: none;
     cursor: default;
 }
 
-h3 {
+h2 {
     margin-bottom: 14px;
     font-size: 2.1em;
     font-weight: normal;
     text-transform: uppercase;
 }
 
-h4 {
+h3 {
     margin-bottom: 7px;
     font-size: 1.75em;
 }
 
-h5 {
+h4 {
     font-size: 1.4em;
 }
 
@@ -70,7 +70,7 @@ aside {
 
 p {
     margin: 0;
-    color: #969696;
+    color: #494949;
     font-family: "Open Sans Regular", sans-serif;
     font-size: 1em;
 }
@@ -134,7 +134,7 @@ nav li.selected {
 nav li:hover a,
 nav li.selected a {
     padding-right: 14px;
-    color: #424242;
+    color: #282828;
     text-shadow: 0 0 3px white, 0 0 3px white, 0 0 3px white;
 }
 
@@ -168,7 +168,7 @@ footer {
 }
 
 footer, aside {
-    color: #aaa;
+    color: #565656;
 }
 
 
@@ -217,7 +217,7 @@ a.secondary {
     font-size: 3.5em;
 }
 
-h5.imagelike {
+h4.imagelike {
     display: none;
 }
 
@@ -241,15 +241,11 @@ h5.imagelike {
 
 #contact h1 {
     margin: 7px 0;
-    color: #424242;
+    color: #282828;
     font-size: 2.1em;
     font-family: "Lato Regular", sans-serif;
     line-height: 91%;
     transition: 350ms text-shadow;
-}
-
-#contact h2 {
-    font-size: 1em;
 }
 
 #contact ul {
@@ -287,7 +283,7 @@ h5.imagelike {
 /* Adaptive (medium) */
 
 @media screen and (min-width: 560px) and (min-device-width: 1050px) {
-    h3 {
+    h2 {
         margin-bottom: 35px;
     }
 
@@ -301,10 +297,6 @@ h5.imagelike {
         font-size: 2.1em;
     }
 
-    #contact h2 {
-        font-size: 1.17em;
-    }
-
     img {
         display: inline-block;
         transition: 350ms opacity;
@@ -314,7 +306,7 @@ h5.imagelike {
         margin-bottom: 0;
     }
 
-    h5.imagelike {
+    h4.imagelike {
         display: initial;
     }
 
@@ -324,19 +316,19 @@ h5.imagelike {
 
     /* Sections */
 
-    h3 {
+    h2 {
         position: relative;
         padding: 7px 0 0 0;
         transition: 350ms color, 350ms padding-left;
     }
 
-    section.selected h3 {
+    section.selected h2 {
         padding-left: 11px;
         color: #424242;
         text-shadow: 0 0 3px white, 0 0 3px white, 0 0 3px white;
     }
 
-    h3:after {
+    h2:after {
         content: "";
         position: absolute;
         display: block;
@@ -349,12 +341,12 @@ h5.imagelike {
         transition: 490ms width;
     }
 
-    section.selected h3:after {
+    section.selected h2:after {
         width: 100%;
         background: linear-gradient(to right,  #e7f5ff 0%,#e7fff5 100%);
     }
 
-    h4 {
+    h3 {
         display: block;
     }
 
@@ -422,26 +414,26 @@ h5.imagelike {
         flex-basis: 210px;
     }
 
-    .group h5 {
+    .group h4 {
         display: flex;
         align-items: center;
         text-align: center;
         justify-content: center;
     }
 
-    .group h5:not(.emphasized) {
+    .group h4:not(.emphasized) {
         margin: 28px 0 14px;
     }
 
-    .group h5.emphasized {
+    .group h4.emphasized {
         height: 117px;
     }
 
-    .group h5.emphasized a {
+    .group h4.emphasized a {
         font-size: 140%;
     }
 
-    .group h5,
+    .group h4,
     .group img {
         margin-bottom: 14px;
     }
@@ -486,7 +478,7 @@ h5.imagelike {
         height: 266px;
     }
 
-    h3 {
+    h2 {
         font-size: 2.1em;
     }
 
